tests/golden/parse_errors/import_missing_path.err
Parse error at /home/junhe/compiler/tests/golden/parse_errors/import_missing_path.cd:1:8: expected import path string, found Identifier `path`
  import path;
         ^
